src/objects/NRG_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Avoided_Cost__c</fullName>
        <label>Avoided Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Escalator__c</fullName>
        <label>Lease Escalator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Prepaid_Down_Payment__c</fullName>
        <label>NRG Prepaid Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Prepaid_System_Cost__c</fullName>
        <label>NRG Prepaid System Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Prepay_Amount__c</fullName>
        <label>NRG Prepay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Quote_Id__c</fullName>
        <label>NRG Quote Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NRG_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NRG System</label>
        <referenceTo>NRG_System__c</referenceTo>
        <relationshipLabel>NRG Quote</relationshipLabel>
        <relationshipName>NRG_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <label>Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Name__c</fullName>
        <label>Sales Order Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>NRG Quote</relationshipLabel>
        <relationshipName>NRG_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Cost__c</fullName>
        <label>System_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <label>Utility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NRG Quote</label>
    <nameField>
        <displayFormat>NRQ-{00000}</displayFormat>
        <label>NRG Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NRG Quote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>